syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerService {
  rpc registerKey (RegisterKeyRequest) returns (RegisterKeyResponse) {}
}

message RegisterKeyRequest {
  string user_id = 1;
  enum TypeKey{
    RANDOM_KEY = 0;
    CPF = 1;
    PHONE_NUMBER = 2;
    EMAIL = 3;
  }
  TypeKey type_key = 2;
  string key_value = 3;
  enum TypeAccount{
    CONTA_CORRENTE = 0;
    CONTA_POUPANCA = 1;
  }
  TypeAccount type_account = 4;
}

message RegisterKeyResponse {
  string pix_id = 1;
}

